--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       max-width: 500px;
       padding: 20px;
       margin: 0 auto;
+      margin-top: 50px;
       background-color: white;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
