--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Учимся работать с дробями и смешанными числами</title>
+  <title>Учимся работать с дробями</title>
   <!-- Подключаем Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -16,7 +16,6 @@
       max-width: 500px;
       padding: 20px;
       margin: 0 auto;
-      margin-top: 50px;
       background-color: white;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
@@ -77,6 +76,14 @@
     mn {
       font-size: 1.5em;
     }
+    
+    /* Увеличиваем шрифт для знаков операций и вопросительного знака */
+    .operation, .question-mark {
+      font-size: 2em;
+      font-weight: bold;
+      vertical-align: middle;
+    }
+
   </style>
 </head>
 <body>
@@ -215,15 +222,15 @@
       correctAnswer = fractionToMixed(resultNum, resultDen);
 
       // Форматирование отображения вопросов с возможными смешанными числами
-      let questionText = `${formatFraction(num1, den1)} ${currentOperation} ${formatFraction(num2, den2)} = ?`;
+      let questionText = `${formatFraction(num1, den1)} <span class="operation">${currentOperation}</span> ${formatFraction(num2, den2)} <span class="question-mark">?</span>`;
 
       if (isMixed1) {
-        questionText = `${formatMixedNumber(Math.floor(num1 / den1), num1 % den1, den1)} ${currentOperation} ${formatFraction(num2, den2)} = ?`;
+        questionText = `${formatMixedNumber(Math.floor(num1 / den1), num1 % den1, den1)} <span class="operation">${currentOperation}</span> ${formatFraction(num2, den2)} <span class="question-mark">?</span>`;
       }
       if (isMixed2) {
-        questionText = `${formatFraction(num1, den1)} ${currentOperation} ${formatMixedNumber(Math.floor(num2 / den2), num2 % den2, den2)} = ?`;
+        questionText = `${formatFraction(num1, den1)} <span class="operation">${currentOperation}</span> ${formatMixedNumber(Math.floor(num2 / den2), num2 % den2, den2)} <span class="question-mark">?</span>`;
       }
-      
+
       document.getElementById("question").innerHTML = questionText;
     }
 
